	ones on another list so they'll get invoked on the next tick. All other
	tick calls added via AddTickCall get invoked asap.

	* list.[h|cpp]: change CloneAndClear to MoveTo, it now moves the queue
	nodes to an existing queue instead of creating a new one

	* cbinding.[h|cpp]: regen

	r: rolf

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp|h: Add a DetachWindow which detaches the surface from
	the window and prevents the window from getting destroyed when the
	surface is destroyed. Also add a few protections against having a
	null window, which we may get when the window has been detached.

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* type.h:
	* type.cpp
	* type.h.in: Added a LookupEvent method that takes a deployment
	parameter so that it doesn't try to use Deployment::GetCurrent. This
	is required when we need to lookup events for deployments which are
	not the current one (when re-creating a PluginInstance since its
	source has changed for instance).

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* window-gtk.cpp:
	* window.cpp|h: Detach the window from the deployment by not storing it,
	use Surface' deployment instead. Also add a convenience SetCurrentDeployment
	method.

	* value.cpp:
	* textblock.cpp:
	* provider.cpp:
	* popup.cpp:
	* glyphs.cpp:
	* downloader.cpp:
	* control.cpp:
	* canvas.cpp:
	* audio.cpp: 
	* dependencyproperty.cpp: Include deployment.h, required now that
	window.h doesn't include it.

	* src.mdp:
	* Makefile.am: Updated with window.cpp.

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h: Moved all managed code handling from PluginInstance
	here.

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* codec-version.h.in: Bump ABI to 16.

2009-10-19  Andreia Gaita  <avidigal@novell.com>

	* list.[h|cpp]: (Queue::CloneAndClear) Added, clones the queue while
	clearing the original
